force-app/main/default/objects/PreferenceSurvey__c/PreferenceSurvey__c.object-meta.xml
<CustomObject>
    <label>PreferenceSurvey</label>
    <nameField>
        <label>PreferenceSurvey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PreferenceSurveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>