force-app/main/default/objects/PreferenceSurvey__c/fields/Collaboration_Areas__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Areas__c</fullName>
    <label>Collaboration Areas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>