force-app/main/default/objects/PreferenceSurvey__c/fields/Collaboration_Roles__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Roles__c</fullName>
    <label>Collaboration Roles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>